# copyclip

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  README.md  install-unix.sh  install-windows.ps1
.github/actions/xvfb-action/: package-lock.json
.github/workflows/: build.linux.yml  build.macos.yml  build.windows.yml  release.yml  test-all.yml  test.linux.yml  test.macos.yml  test.windows.yml  testing.yml  tests.yml
src/: main.rs
