[package]
name = "copyclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = { git = "https://github.com/xliiv/rust-clipboard", branch = "upgrade-x11" }
lazy_static = "1.4"

[dev-dependencies]
serial_test = "0.9"
